Modified auth endpoints
